Add realtime and extensible media providers
